--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,7 +1,12 @@
 @import 'logo.css';
+@import 'leftFooter.css';
 *{
     margin: 0;
     box-sizing: border-box;
     text-decoration: none;
     color: #000;
+}
+.blog-post__container{ 
+    display: flex;
+    flex-direction: row;
 }
