--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,7 @@
-@import 'logo.css';
-@import 'leftFooter.css';
 @import url('https://fonts.googleapis.com/css2?family=Charmonman&display=swap');
+@import 'logo.css';
+@import 'menu.css';
+@import 'leftFooter.css';
 :root {
     --grey: #54595F;
 }
