--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -31,9 +31,6 @@
     width: 70%;
 }
 /* fix problem with menu: */
-.icon-image{
-    margin-top:150px;
-}
-.icon-image img{
+img{
     z-index:-1;
 }
