--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,6 +2,7 @@
 @import 'logo.css';
 @import 'menu.css';
 @import 'leftFooter.css';
+@import 'blog.css';
 :root {
     --grey: #54595F;
 }
@@ -25,10 +26,6 @@
     flex-direction: row;
     width: 90%;
     margin: 0 auto;
-}
-.blog-post{
-    margin: 7% 5%;
-    width: 70%;
 }
 /* fix problem with menu: */
 img{
