--- a/src/styles/logo.css
+++ b/src/styles/logo.css
@@ -2,7 +2,7 @@
     display: block;
     text-align: center;
     width: 600px;
-    margin: 10vh auto 0;
+    margin: 5vh auto 5vh;
     max-width:100%;
 }
 .logo__image{
