problem with fuzzy image on single posts fixed margin to single post added

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -25,3 +25,7 @@
 img{
     z-index:-1;
 }
+/* fix probllem with display images on the post */
+.gatsby-resp-image-background-image{
+    background-image: none;
+}
