--- a/src/styles/leftFooter.css
+++ b/src/styles/leftFooter.css
@@ -1,7 +1,7 @@
 .left-footer{
     width: 20%;
     line-height: 2rem;
-    margin-top: 200px;
+    margin-top: 10vh;
     border-right: 1px solid #999;
     padding-right: 2vw;
     display: flex;
