--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -8,6 +8,7 @@
     flex-basis: 50%;
     display: flex;
     align-items:flex-end;
+    padding-bottom:5px;
 }
 .blog-post__container{
     display:  flex;
@@ -21,4 +22,11 @@
 .blog-post__single-post__wrapper{
     margin: 10vh 10vw;
     width: 90%; 
+}
+/* mobile blog list*/
+@media only screen and (max-width: 1000px){
+    .blog-list__wrapper{
+        flex-basis:100%;
+        padding-bottom:5px;
+    }
 }
