bottom footer added will display when left footer disappear, display of elements on 500px width changed

--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -30,3 +30,8 @@
         padding-bottom:5px;
     }
 }
+@media only screen and (max-width: 500px){
+    .blog-list__wrapper{
+        display:block;
+    }
+}
