--- a/src/styles/bottomMobileFooter.css
+++ b/src/styles/bottomMobileFooter.css
@@ -5,5 +5,6 @@
 @media only screen and (max-width: 900px){
     .bottom-footer{
         display:block;
+        border-top: 1px solid #000;
     }
 }
