--- a/src/styles/leftFooter.css
+++ b/src/styles/leftFooter.css
@@ -4,7 +4,8 @@
     margin-top: 10vh;
     border-right: 1px solid #999;
     padding-right: 2vw;
-    display: inline-block;
+    display: block;
+    float:left;
     position:-webkit-sticky;
     position:sticky;
     top:10px;
