--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -11,6 +11,7 @@
     font-size: 1.5rem;
     padding: 0 4%;
     z-index: 100;
+    text-align: center;
 }
 .menu__item:hover{
     filter: blur(0.7px);
