--- a/src/styles/leftFooter.css
+++ b/src/styles/leftFooter.css
@@ -10,6 +10,7 @@
     padding-right: 2vw;
     top:10px;
     left:1%;
+    font-family: 'CrimsonSemibold';
 }
 .left-footer__picture{
     max-width:100%;
