--- a/src/styles/bottomMobileFooter.css
+++ b/src/styles/bottomMobileFooter.css
@@ -1,6 +1,7 @@
 .bottom-footer{
     display:none;
     margin: 5vh 2vw;
+    font-family: 'CrimsonSemibold';
 }
 @media only screen and (max-width: 900px){
     .bottom-footer{
