--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,9 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Charmonman&display=swap');
+@font-face{
+    font-family: "CrimsonSemibold";
+    src: local("CrimsonSemibold"),
+    url('../fonts/crimson/OTF/Crimson-Semibold.otf') format("truetype");
+    font-weight:bold;
+}
 @import 'logo.css';
 @import 'menu.css';
 @import 'blog.css';
 @import 'leftFooter.css';
 @import 'bottomMobileFooter.css';
+body{
+    font-family: 'Charmonman', cursive;
+}
 :root {
     --grey: #54595F;
 }
@@ -14,13 +23,12 @@
     text-decoration: none;
     list-style-type: none;
     color: var(--grey);
-    font-family: 'Charmonman', cursive;
 }
 .contact{
     padding-right:50px;
     text-align:right;
     font-size: 2rem;
-    border-bottom: 1px solid #54595F;
+    border-bottom: 1px solid #999999;
 }
 /* fix problem with menu: */
 img{
