--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -16,7 +16,7 @@
     flex-basis: 50%;
     display: flex;
     align-items:flex-end;
-    padding-bottom:5px;
+    margin-bottom:40px;
 }
 .blog-list{
     padding:0 1px 0 1rem;
