--- a/src/styles/bottomMobileFooter.css
+++ b/src/styles/bottomMobileFooter.css
@@ -3,6 +3,12 @@
     margin: 5vh 2vw;
     font-family: 'CrimsonSemibold';
 }
+.bottom-footer__description{
+    max-width: 300px;
+}
+.bottom-footer .left-footer__social-icons{
+    margin: 50px 0;
+}
 @media only screen and (max-width: 900px){
     .bottom-footer{
         display:block;
