--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -36,6 +36,7 @@
 @media only screen and (max-width: 600px){
     .blog-list__wrapper{
         display:block;
+        width: 100%;
     }
     .blog-list{
         padding:0;
