--- a/src/styles/bottomMobileFooter.css
+++ b/src/styles/bottomMobileFooter.css
@@ -3,15 +3,21 @@
     margin: 5vh 2vw;
     font-family: 'CrimsonSemibold';
 }
-.bottom-footer__description{
-    max-width: 300px;
-}
 .bottom-footer .left-footer__social-icons{
     margin: 50px 0;
+    max-width: 300px;
+
+}
+.bottom-footer .left-footer__link{
+    flex-basis: 40px;
+    margin-right:5%;
+}
+.bottom-footer__description {
+    max-width: 300px;
 }
 @media only screen and (max-width: 900px){
     .bottom-footer{
         display:block;
-        border-top: 1px solid #000;
+        border-top: 2px solid #000;
     }
 }
