--- a/src/styles/leftFooter.css
+++ b/src/styles/leftFooter.css
@@ -26,9 +26,9 @@
     flex-wrap: nowrap;
     flex-direction: row;
 }
-.left-footer__link{
-    flex-basis: 40px;
-    padding-right: 10px;
+.left-footer .left-footer__link{
+    flex-basis: 20%;
+    margin: 0 5px
 }
 .left-footer__social-icon{
     width: 100%;
