--- a/src/styles/bottomMobileFooter.css
+++ b/src/styles/bottomMobileFooter.css
@@ -1,7 +1,7 @@
 .bottom-footer{
     display:none;
     margin: 5vh 2vw;
-    font-family: 'CrimsonSemibold';
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 .bottom-footer .left-footer__social-icons{
     margin: 50px 0;
